updated to fix issues raised during dev
