# controllers/SourcesService.js
@@ -7,20 +7,15 @@ exports.sourcesGet = function(args, res, next) {
   * description (String)
   * created (Date)
   * updated (Date)
-  * visibility (String)
   **/
-  
-  
-  var examples = {};
-  
-  if(Object.keys(examples).length > 0) {
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
   }
-  
   
 }
 
@@ -29,18 +24,14 @@ exports.sourcesPost = function(args, res, next) {
    * parameters expected in the args:
   * source (InformationSourceRequest)
   **/
-  
-  
-  var examples = {};
-  
-  if(Object.keys(examples).length > 0) {
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
   }
-  
   
 }
 
@@ -50,8 +41,6 @@ exports.sourcesSourceIdDelete = function(args, res, next) {
   * sourceId (String)
   **/
   // no response value expected for this operation
-  
-  
   res.end();
 }
 
@@ -60,18 +49,14 @@ exports.sourcesSourceIdGet = function(args, res, next) {
    * parameters expected in the args:
   * sourceId (String)
   **/
-  
-  
-  var examples = {};
-  
-  if(Object.keys(examples).length > 0) {
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
   }
-  
   
 }
 
@@ -82,8 +67,6 @@ exports.sourcesSourceIdPut = function(args, res, next) {
   * source (InformationSourceRequest)
   **/
   // no response value expected for this operation
-  
-  
   res.end();
 }
 
@@ -92,18 +75,14 @@ exports.sourcesSourceIdStatusGet = function(args, res, next) {
    * parameters expected in the args:
   * sourceId (String)
   **/
-  
-  
-  var examples = {};
-  
-  if(Object.keys(examples).length > 0) {
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
   }
-  
   
 }
 
@@ -112,18 +91,14 @@ exports.sourcesSourceIdStatusPut = function(args, res, next) {
    * parameters expected in the args:
   * sourceId (String)
   **/
-  
-  
-  var examples = {};
-  
-  if(Object.keys(examples).length > 0) {
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
   }
-  
   
 }
 
